force-app/main/default/objects/Account/fields/Business_Response_Error__c.field-meta.xml
<CustomField>
    <fullName>Business_Response_Error__c</fullName>
    <label>Business Response Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>