force-app/main/default/objects/Account/fields/Buyer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Buyer Auto Renewal Eligible?</description>
    <inlineHelpText>Is this Buyer Auto Renewal Eligible?</inlineHelpText>
    <label>Buyer Eligibility</label>
    <type>Checkbox</type>
</CustomField>