force-app/main/default/objects/Account/fields/Buyer_Last_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Last_Logged_In__c</fullName>
    <description>Last Date Buyer Logged into IAAI.com</description>
    <label>Buyer Last Logged In</label>
    <type>Date</type>
</CustomField>