force-app/main/default/objects/Account/fields/Buyer_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Last_Login_Date__c</fullName>
    <description>Last Date Buyer Logged into IAAI.com</description>
    <inlineHelpText>Last Date Buyer Logged into IAAI.com</inlineHelpText>
    <label>Buyer Last Login Date</label>
    <type>Date</type>
</CustomField>