force-app/main/default/objects/Account/fields/Buyer_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Promo_Code__c</fullName>
    <description>Last Promo Code Used by Buyer for discounted registration fees.</description>
    <inlineHelpText>Last Promo Code Used by Buyer for discounted registration fees.</inlineHelpText>
    <label>Buyer Promo Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>