force-app/main/default/objects/Account/fields/Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Status__c</fullName>
    <description>Buyer&apos;s current status, e.g., Active or Banned.</description>
    <inlineHelpText>Buyer&apos;s current status, e.g., Active or Banned.</inlineHelpText>
    <label>Buyer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Registration in Progress</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Buyer Active</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Buyer Inactive</label>
            </value>
            <value>
                <fullName>ACT</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>INA</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>NEW</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>BAN</fullName>
                <label>Banned</label>
            </value>
            <value>
                <fullName>DUP</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>OUT</fullName>
                <label>Out of Business</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <label>Prospective</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>