force-app/main/default/objects/Account/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Public Buyer</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Licensed Buyer</label>
            </value>
            <value>
                <fullName>Body Shop</fullName>
            </value>
            <value>
                <fullName>ADESA-Dealer</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
            <value>
                <fullName>AARDA Member</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
            <value>
                <fullName>ADESA-Sites</fullName>
            </value>
            <value>
                <fullName>ARPAC</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>IAAI BUYER</fullName>
            </value>
            <value>
                <fullName>MB Dealer</fullName>
            </value>
            <value>
                <fullName>MB Public Buyer</fullName>
            </value>
            <value>
                <fullName>MB Shredder</fullName>
            </value>
            <value>
                <fullName>OARA</fullName>
            </value>
            <value>
                <fullName>Scrapper</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
            </value>
            <value>
                <fullName>ARAAC</fullName>
            </value>
            <value>
                <fullName>Rebuilder</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
                <isActive>false</isActive>
                <label>Licensed</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <isActive>false</isActive>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>