force-app/main/default/objects/Account/fields/Buyer_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type_Code__c</fullName>
    <label>Buyer Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>