force-app/main/default/objects/Account/fields/Buyer_Volume_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Volume_Segmentation__c</fullName>
    <label>Buyer Volume Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>