force-app/main/default/objects/Account/fields/BuyerRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>BuyerRenewalDate__c</fullName>
    <label>BuyerRenewalDate</label>
    <type>Date</type>
</CustomField>