force-app/main/default/objects/Account/fields/Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Content__c</fullName>
    <description>The Google Ad Words field is used by IAA&apos;s Marketing Team to explore customer behavior.</description>
    <inlineHelpText>The Google Ad Words field is used by IAA&apos;s Marketing Team to explore customer behavior.</inlineHelpText>
    <label>Campaign Content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>