force-app/main/default/objects/Account/fields/Can_Buy_Category_B__c.field-meta.xml
<CustomField>
    <fullName>Can_Buy_Category_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Buy Category B</label>
    <type>Checkbox</type>
</CustomField>