force-app/main/default/objects/Account/fields/Can_Buy_Categoty_A__c.field-meta.xml
<CustomField>
    <fullName>Can_Buy_Categoty_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Buy Categoty A</label>
    <type>Checkbox</type>
</CustomField>