force-app/main/default/objects/Account/fields/Card_Number_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Card_Number_Last_4__c</fullName>
    <label>Card Number Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>