force-app/main/default/objects/Account/fields/Cash_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>Cash_Only_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Only Payments?</label>
    <type>Checkbox</type>
</CustomField>