force-app/main/default/objects/Account/fields/Change_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Account_Owner__c</fullName>
    <label>Change Account Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>