force-app/main/default/objects/Account/fields/Change_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Change_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Ownership</label>
    <type>Checkbox</type>
</CustomField>