force-app/main/default/objects/Account/fields/Check_Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Check_Payable_To__c</fullName>
    <label>Check Payable To</label>
    <length>40</length>
    <type>Text</type>
</CustomField>