force-app/main/default/objects/Account/fields/Check_Writing_Limit__c.field-meta.xml
<CustomField>
    <fullName>Check_Writing_Limit__c</fullName>
    <description>Informs the check writing limit for the account.</description>
    <inlineHelpText>Informs the check writing limit for the account.</inlineHelpText>
    <label>Check Writing Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>