force-app/main/default/objects/Account/fields/Check_Writing_Privilege__c.field-meta.xml
<CustomField>
    <fullName>Check_Writing_Privilege__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informs if an account has check writing privilege.</description>
    <inlineHelpText>Informs if an account has check writing privilege.</inlineHelpText>
    <label>Check Writing Privilege</label>
    <type>Checkbox</type>
</CustomField>