force-app/main/default/objects/Account/fields/Children_Acct_Count__c.field-meta.xml
<CustomField>
    <fullName>Children_Acct_Count__c</fullName>
    <label>Children Acct Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>