force-app/main/default/objects/Account/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>