force-app/main/default/objects/Account/fields/Contract_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Auto Renewal?</label>
    <type>Checkbox</type>
</CustomField>