force-app/main/default/objects/Account/fields/Count_of_Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Opportunities__c</fullName>
    <label>Count of Closed Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>