force-app/main/default/objects/Account/fields/Count_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities__c</fullName>
    <description>Want to know how many times you’ve engaged with this customer and tracked a deal?  This field will provide a gross value for that.&lt;br&gt;</description>
    <inlineHelpText>Want to know how many times you’ve engaged with this customer and tracked a deal?  This field will provide a gross value for that.&lt;br&gt;</inlineHelpText>
    <label>Count of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>