force-app/main/default/objects/Account/fields/Country_Flag_s__c.field-meta.xml
<CustomField>
    <fullName>Country_Flag_s__c</fullName>
    <inlineHelpText>URLs of the images uploaded. Separate multiple URLs with semicolon. 
Format is: /servlet/servlet.ImageServer?id={ImageID}&amp;oid={OrgID}</inlineHelpText>
    <label>Country Flag(s)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>