force-app/main/default/objects/Account/fields/Country_or_Countries_Served__c.field-meta.xml
<CustomField>
    <fullName>Country_or_Countries_Served__c</fullName>
    <label>Country or Countries Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_Served</valueSetName>
    </valueSet>
</CustomField>