force-app/main/default/objects/Account/fields/CRC_checksum__c.field-meta.xml
<CustomField>
    <fullName>CRC_checksum__c</fullName>
    <label>Checksum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>