force-app/main/default/objects/Account/fields/CRC_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>CRC_Same_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Day</label>
    <type>Checkbox</type>
</CustomField>