force-app/main/default/objects/Account/fields/Credit_Card_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Accepted?</label>
    <type>Checkbox</type>
</CustomField>