force-app/main/default/objects/Account/fields/CSA_Today_Automatic_Reports__c.field-meta.xml
<CustomField>
    <fullName>CSA_Today_Automatic_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if CSA Today reports are sent out to a Provider</description>
    <inlineHelpText>Identifies if CSA Today reports are sent out to a Provider</inlineHelpText>
    <label>CSA Today Automatic Reports</label>
    <type>Checkbox</type>
</CustomField>