force-app/main/default/objects/Account/fields/CTA_Taken__c.field-meta.xml
<CustomField>
    <fullName>CTA_Taken__c</fullName>
    <label>Call To Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>NA</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Guest</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Public Buyer</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Licensed Business Buyer</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Upgrade To Public Buyer</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Upgrade To Licensed BusinessBuyer</label>
            </value>
            <value>
                <fullName>LicensedBusinessBuyer</fullName>
                <isActive>false</isActive>
                <label>LicensedBusinessBuyer</label>
            </value>
            <value>
                <fullName>PublicBuyer</fullName>
                <isActive>false</isActive>
                <label>PublicBuyer</label>
            </value>
            <value>
                <fullName>UpgradeToBuyer</fullName>
                <isActive>false</isActive>
                <label>UpgradeToBuyer</label>
            </value>
            <value>
                <fullName>UpgradeToLicensedBusinessBuyer</fullName>
                <isActive>false</isActive>
                <label>UpgradeToLicensedBusinessBuyer</label>
            </value>
            <value>
                <fullName>UpgradeToPublicBuyer</fullName>
                <isActive>false</isActive>
                <label>UpgradeToPublicBuyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>