force-app/main/default/objects/Account/fields/CTA_Taken_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CTA_Taken_Timestamp__c</fullName>
    <label>CTA Taken Timestamp</label>
    <type>DateTime</type>
</CustomField>