force-app/main/default/objects/Account/fields/Current_Year_Gross__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Gross__c</fullName>
    <description>Gross profit amount for the Account. (YTD)</description>
    <inlineHelpText>Gross profit amount for the Account. (YTD)</inlineHelpText>
    <label>Current Year Gross</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>