force-app/main/default/objects/Account/fields/Current_Year_Purchased_Units__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Purchased_Units__c</fullName>
    <description>Current Year Purchased Units</description>
    <label>Current Year Purchased Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>