force-app/main/default/objects/Account/fields/Date_of_Last_Won_Deal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Won_Deal__c</fullName>
    <description>This value can come in handy when evaluating repeat customers (i.e. if date of last won deal is six months ago, time to follow up).&lt;br&gt;&lt;br&gt;</description>
    <inlineHelpText>This value can come in handy when evaluating repeat customers (i.e. if date of last won deal is six months ago, time to follow up).&lt;br&gt;&lt;br&gt;</inlineHelpText>
    <label>Date of Last Won Deal</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>