force-app/main/default/objects/Account/fields/Dealer_License__c.field-meta.xml
<CustomField>
    <fullName>Dealer_License__c</fullName>
    <label>Dealer License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>