force-app/main/default/objects/Account/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If someone wants their name removed as account owner, they can check this box.</description>
    <inlineHelpText>Check this box if you don&apos;t want this account under your name anymore.</inlineHelpText>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>