force-app/main/default/objects/Account/fields/Display_on_Broker_Listing__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Broker_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Broker Listing?</label>
    <type>Checkbox</type>
</CustomField>