force-app/main/default/objects/Account/fields/Distance_From_Branch__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Branch__c</fullName>
    <description>Google Maps calculated distance from account billing address to the branch address.</description>
    <inlineHelpText>Google Maps calculated distance from account billing address to the branch address.</inlineHelpText>
    <label>Distance From Branch</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>