force-app/main/default/objects/Account/fields/DocAssist__c.field-meta.xml
<CustomField>
    <fullName>DocAssist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Account utilizes IAA&apos;s Doc Assist tool.</description>
    <inlineHelpText>Indicates if an Account utilizes IAA&apos;s Doc Assist tool.</inlineHelpText>
    <label>DocAssist</label>
    <type>Checkbox</type>
</CustomField>