force-app/main/default/objects/Account/fields/Document_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiration_Date__c</fullName>
    <description>This field displays the date of the most recent expiring registration document for Buyers.</description>
    <inlineHelpText>This field displays the date of the most recent expiring registration document for Buyers.</inlineHelpText>
    <label>Document Expiration Date</label>
    <type>Date</type>
</CustomField>