force-app/main/default/objects/Account/fields/Est_Cost_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost_of_Repair__c</fullName>
    <description>Est. Cost of Repair</description>
    <label>Est. Cost of Repair</label>
    <length>40</length>
    <type>Text</type>
</CustomField>