force-app/main/default/objects/Account/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <inlineHelpText>How much Account is worth</inlineHelpText>
    <label>Estimated Volume ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>