force-app/main/default/objects/Account/fields/Express_Notary__c.field-meta.xml
<CustomField>
    <fullName>Express_Notary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Account utilizes IAA&apos;s Express Notary service.</description>
    <inlineHelpText>Indicates if an Account utilizes IAA&apos;s Express Notary service.</inlineHelpText>
    <label>Express Notary</label>
    <type>Checkbox</type>
</CustomField>