force-app/main/default/objects/Account/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <description>For Licensed Broker List on Help Community</description>
    <label>Fees</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>