force-app/main/default/objects/Account/fields/Forms_of_Payment_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Forms_of_Payment_Accepted__c</fullName>
    <label>Forms of Payment Accepted</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>