force-app/main/default/objects/Account/fields/Friday_Open_From__c.field-meta.xml
<CustomField>
    <fullName>Friday_Open_From__c</fullName>
    <label>Open From</label>
    <type>Time</type>
</CustomField>