force-app/main/default/objects/Account/fields/Friday_Unavailable_To__c.field-meta.xml
<CustomField>
    <fullName>Friday_Unavailable_To__c</fullName>
    <label>Unavailable To</label>
    <type>Time</type>
</CustomField>