force-app/main/default/objects/Account/fields/General_Marketing__c.field-meta.xml
<CustomField>
    <fullName>General_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option if you would like your client to receive General Marketing content.</inlineHelpText>
    <label>General Marketing</label>
    <type>Checkbox</type>
</CustomField>