force-app/main/default/objects/Account/fields/Get_LexisNexis_Result__c.field-meta.xml
<CustomField>
    <fullName>Get_LexisNexis_Result__c</fullName>
    <label>Get LexisNexis Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>API_Request</valueSetName>
    </valueSet>
</CustomField>