force-app/main/default/objects/Account/fields/Get_Note_Status__c.field-meta.xml
<CustomField>
    <fullName>Get_Note_Status__c</fullName>
    <label>Get Note Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>API_Request</valueSetName>
    </valueSet>
</CustomField>