force-app/main/default/objects/Account/fields/Gross_Spend_YTD__c.field-meta.xml
<CustomField>
    <fullName>Gross_Spend_YTD__c</fullName>
    <label>Gross Spend - YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>