force-app/main/default/objects/Account/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Group name is used to help associate accounts.</description>
    <inlineHelpText>Group name is used to help associate accounts.</inlineHelpText>
    <label>Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>