force-app/main/default/objects/Account/fields/Handles_Cash__c.field-meta.xml
<CustomField>
    <fullName>Handles_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Account handles cash.</description>
    <inlineHelpText>Indicates if an Account handles cash.</inlineHelpText>
    <label>Handles Cash</label>
    <type>Checkbox</type>
</CustomField>