force-app/main/default/objects/Account/fields/IAA_Check__c.field-meta.xml
<CustomField>
    <fullName>IAA_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAA Check</label>
    <type>Checkbox</type>
</CustomField>