force-app/main/default/objects/Account/fields/IAA_Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>IAA_Contract_Renewal_Date__c</fullName>
    <description>Displays the contract renewal date the Provider has with IAA. (Future/Expiration Date)</description>
    <inlineHelpText>Displays the contract renewal date the Provider has with IAA. (Future/Expiration Date)</inlineHelpText>
    <label>IAA Contract Renewal Date</label>
    <type>Date</type>
</CustomField>